--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <title>Thiệp 20/11 + YouTube Không Quảng Cáo</title>
+  <title>Thiệp</title>
   <style>
     body { margin:0; overflow:hidden; background:#000; touch-action:none; }
     #info { position:absolute; top:10px; left:10px; color:#fff; padding:10px 15px;
@@ -38,11 +38,6 @@
 <body>
   <div id="info">Chạm hoặc bấm vào Trái Đất để mở thiệp bí mật!</div>
   <div id="flash"></div>
-
-  <div id="card">
-    <h1>Chúc Mừng Ngày Phụ Nữ Việt Nam 20/11!</h1>
-    <p>Chúc em ngày 20/11 thật nhiều niềm vui,<br>sức khỏe dồi dào và luôn xinh đẹp rạng rỡ!</p>
-    <p style="margin-top:40px; color:#00ffff; font-size:18px;">Từ anh </p>
 
     <div id="youtubeSection">
       <h2>YouTube Không Quảng Cáo</h2>
@@ -207,3 +202,4 @@
   </script>
 </body>
 </html>
+
