--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <title>Thiệp</title>
+  <title>Thiệp 20/11 + YouTube Không Quảng Cáo</title>
   <style>
     body { margin:0; overflow:hidden; background:#000; touch-action:none; }
     #info { position:absolute; top:10px; left:10px; color:#fff; padding:10px 15px;
@@ -38,6 +38,8 @@
 <body>
   <div id="info">Chạm hoặc bấm vào Trái Đất để mở thiệp bí mật!</div>
   <div id="flash"></div>
+
+  <div id="card">
 
     <div id="youtubeSection">
       <h2>YouTube Không Quảng Cáo</h2>
@@ -202,4 +204,3 @@
   </script>
 </body>
 </html>
-
