--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <title>Thiệp</title>
+  <title>Chill and Ytb</title>
   <style>
     body { margin:0; overflow:hidden; background:#000; touch-action:none; }
     #info { position:absolute; top:10px; left:10px; color:#fff; padding:10px 15px;
@@ -228,3 +228,4 @@
   </script>
 </body>
 </html>
+
